# gameshop

./: .docker-ignore  .env  .gitignore  .last_prod-test_version  .last_prod-tests_version  .last_prod_version  .last_test_version  Dockerfile  Dockerfile.parser  Makefile  README.md  alembic.ini  create-app.sh  deploy.sh  docker-compose.yaml  dump.rdb  entrypoint.sh  init_db.sh  init_db.sql  pyproject.toml  pyrightconfig.json  reinit_db.sh  test_endpoints.sh  update.sql
.github/workflows/: ci.yaml
devops/: prometheus.yaml
migrations/: env.py
migrations/versions/: 0f04217acfad_changed_user_password_hash_type_from_.py  255990c637c4_created_order_related_models.py  4e31f195cd74_removed_steamgiftorder_percent_fee.py  53fe3dc0866b_initial.py  54954f5403c0_upgraded_product_on_sale.py  5d2acaf5e971_new_admin_model.py  5e47d4faf307_created_user_model.py  6238a75a8bfe_new_product_on_sale_model.py  69410d64bdf6_new_product_orig_url_field.py  73824129f4a8_new_product_in_stock_column.py  7384c8e447f9_merged_customerdata_into_order_model.py  74740999d7fd_new_column_order_customer_tg.py  88cf604daf6d_removed_unique_index_user_username.py  8ede77519793_removed_product_on_sale.py  9bf609c8f9b8_reworked_product_model.py  9f479f4a0af1_used_table_inheritance_for_order_models.py  a37b45313e96_new_token_model.py  a870a2b26dbe_new_user_username_column.py  abab96077f95_removed_product_delivery_method_column.py  ad925e19bf90_upgraded_steam_top_up_model.py  b7311e1005a3_new_token_scope_column.py  b94aba01f92b_updated_platform_and_category_models_to_.py  b9c54e95fbd0_moved_product_delivery_methods_into_.py  ba08e7b814a5_new_order_item_region_column.py  c00121503172_new_steam_gift_order_model.py  c8575bc64f2a_created_news_model.py  ca60a9fe89f5_extended_order_model_with_columns_.py  d32fd528f162_new_steam_top_up_model.py  d3f0d91e7889_new_column_news_title.py  (+3 more)
scripts/: deploy.sh  entrypoint.sh  load_steam_keys.py  parse_sales_cron.py
scripts/sales/: _base.py  (+2 more)
src/: config.py  get_discounts_cron.py  main.py  parse_sales_cron.py  seed.py
tests/: helpers.py  utils.py
(+177 files in other folders)
