[tool.poetry]
name = "gameshop"
version = "0.1.0"
description = ""
authors = ["AlexeyTarasov77 <alexxey2707@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic-settings = {extras = ["yaml"], version = "^2.6.1"}
psycopg = "^3.2.3"
punq = "^0.7.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
