[tool.poetry]
name = "gameshop"
version = "0.1.0"
description = ""
authors = ["AlexeyTarasov77 <alexxey2707@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic-settings = {extras = ["yaml"], version = "^2.6.1"}
psycopg = "^3.2.3"
punq = "^0.7.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
alembic = "^1.14.0"
greenlet = "^3.1.1"
python-multipart = "^0.0.19"
aiofiles = "^24.1.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
aiosmtplib = "^3.0.2"
httpx = "^0.28.1"
pytest = "^8.3.4"
faker = "^33.1.0"
returns = "^0.24.0"
pytz = "^2025.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.391"
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
